Added CSS libs and tasks for managing these

--- a/app/assets/index.jade
+++ b/app/assets/index.jade
@@ -2,6 +2,7 @@ doctype 5
 html
   head
     title Test
+    link(href='app.css', rel='stylesheet', type='text/css')
   body
     .test
       p Hello World!
