Update media player

--- a/app/templates/index.jade
+++ b/app/templates/index.jade
@@ -4,5 +4,4 @@ html
     title Test
     link(href='app.css', rel='stylesheet', type='text/css')
   body
-    .test
-      p Hello World!
+    script(src='app.js')
